confik-macros/tests/trybuild/compile-fail/crate-not-in-scope.rs
#[derive(confik::Configuration)]
#[confik(crate = not_in_scope)]
struct Config {}

fn main() {}
